2002-03-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (config.lisp): chmod +w before appending

2002-03-14  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): fixed a deadly typo in the 2002-02-28 patch

2002-03-13  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 528886 ] (typep x (type-of x)) must => T (FFI)
	* type.lisp (foreign-function, foreign-variable, foreign-address)
	(foreign-pointer): new types

2002-03-12  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 527380 ]: encoding :output-error-action :ignore broken
	* encoding.d (nls_wcslen): synch with nls_wcstombs() wrt
	ignoring errors (i.e., return the correct number of dest bytes)
	(nls_asciiext_wcslen): synch with nls_asciiext_wcstombs() wrt
	ignoring errors (i.e., return the correct number of dest bytes)
	(nls_wcstombs, nls_asciiext_wcstombs): handle ignored errors
	properly (and do not require the same SRC and DEST count)

2002-03-12  Sam Steingold  <sds@gnu.org>

	* configure (maybe_link): new function
	* makemake.in (config.status, configure, makemake.in)
	(unixconf.h.in, VERSION): new targets

2002-03-12  Sam Steingold  <sds@gnu.org>

	* unix.d (HAVE_DLOPEN) [UNIX_HPUX]: undef since dlopen() is
	broken on HP-UX without a patch

2002-03-11  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-warn, c-warn): CURRENT-FUNCTION does not
	necessarily return a function
	(form-name): new function - a short printed form representation
	(compile-file): use it for *COMPILE-PRINT* and form name that is
	passed to COMPILE-TOPLEVEL-FORM instead of '#:TOP-LEVEL-FORM

2002-03-10  Peter Burwood  <clisp@peterb.org.uk>

	* pathname.d (realpath) [UNIX_CYGWIN32]: neither dir nor symlink
	generate ENOTDIR

2002-03-10  Sam Steingold  <sds@gnu.org>

	The default foreign language is now ANSI C, not K&R C
	* foreign1.lisp (DEF-C-CALL-OUT, DEF-C-CALL-IN): deprecated
	(*foreign-language*): new variable
	(default-foreign-language): new exported macro (set it)
	(parse-c-function): use it